# airbender-platform

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  libnull.rlib  reproducible-build-plan.md  rust-toolchain.toml  versions.json
.config/: nextest.toml
.github/release-please/: config.json
.github/scripts/: build-api-docs.sh
.github/workflows/: ci.yml  deploy-docs.yml  release-please.yaml  release.yml
api/: crates.js  help.html  index.html  settings.html  src-files.js
crates/airbender-build/: Cargo.toml  README.md
crates/airbender-build/docker/: Dockerfile.template
crates/airbender-build/src/: config.rs  constants.rs  docker.rs  errors.rs  lib.rs  manifest.rs  metadata.rs  resolver.rs  utils.rs
crates/airbender-build/tests/: panic_immediate_abort.rs
crates/airbender-codec/: Cargo.toml  README.md
crates/airbender-codec/src/: lib.rs
crates/airbender-crypto/: Cargo.toml  README.md
crates/airbender-crypto/src/: glv_decomposition.rs  lib.rs  raw_delegation_interface.rs
crates/airbender-crypto/src/ark_ff_delegation/: mod.rs
crates/airbender-crypto/src/ark_ff_delegation/biginteger/: mod.rs
crates/airbender-crypto/src/ark_ff_delegation/fp/: mod.rs
crates/airbender-crypto/src/bigint_delegation/: delegation.rs  mod.rs
crates/airbender-crypto/src/blake2s/: mod.rs  test.rs
crates/airbender-crypto/src/blake2s/test_program/: Cargo.toml
crates/airbender-crypto/src/bls12_381/: mod.rs
crates/airbender-crypto/src/bls12_381/curves/: g1.rs  g1_swu_iso.rs  g2.rs  g2_swu_iso.rs  mod.rs
crates/airbender-crypto/src/bls12_381/fields/: fq.rs  fq12.rs  fq6.rs
crates/airbender-crypto/src/secp256k1/: context.rs  mod.rs  recover.rs
crates/airbender-crypto/src/secp256k1/field/: field_10x26.rs  field_5x52.rs  field_8x32.rs  mod.rs
crates/airbender-crypto/src/secp256k1/points/: affine.rs  jacobian.rs  mod.rs
crates/airbender-crypto/src/secp256k1/scalars/: mod.rs  scalar32.rs  scalar32_delegation.rs  scalar64.rs
crates/airbender-crypto/src/secp256r1/: context.rs
crates/airbender-crypto/src/secp256r1/field/: fe32_delegation.rs  fe64.rs
crates/airbender-crypto/src/secp256r1/scalar/: scalar_delegation.rs
crates/airbender-crypto/src/sha3/: mod.rs  naive.rs
crates/airbender-crypto/src/sha3/delegated/: mod.rs  precompile.rs  precompile_logic_simulator.rs
crates/airbender-crypto/tests/: secp256k1.rs  secp256r1.rs
crates/airbender-guest/: Cargo.toml  README.md
crates/airbender-guest/src/: commit.rs  cycle.rs  input.rs  lib.rs  transport.rs
crates/airbender-host/: Cargo.toml  README.md
crates/airbender-host/src/: cycle_marker.rs  error.rs  inputs.rs  lib.rs  nd_source.rs  program.rs  proof.rs  prover.rs  receipt.rs  sim.rs  source.rs  transpiler.rs  vk.rs
crates/airbender-host/src/prover/: cpu_prover.rs  dev_prover.rs  gpu_prover.rs  mod.rs
crates/airbender-host/src/runner/: mod.rs  simulator_runner.rs  transpiler_runner.rs
crates/airbender-macros/: Cargo.toml  README.md
crates/airbender-macros/src/: lib.rs
crates/airbender-rt/: Cargo.toml  README.md
crates/airbender-rt/src/: allocator.rs  boot.rs  getrandom.rs  glue.rs  lib.rs  sys.rs  uart.rs
crates/airbender-rt/src/allocator/: bump_allocator.rs  talc_allocator.rs
crates/airbender-sdk/: Cargo.toml  README.md
crates/airbender-sdk/src/: lib.rs
crates/cargo-airbender/: Cargo.toml  README.md
crates/cargo-airbender/src/: cli.rs  error.rs  input.rs  main.rs  ui.rs
crates/cargo-airbender/src/commands/: build.rs  clean.rs  mod.rs  new.rs  prove.rs  run.rs  vk.rs
crates/cargo-airbender/src/commands/new/: deps.rs  mod.rs  profiles.rs  template.rs
crates/cargo-airbender/src/commands/new/snapshots/: cargo_airbender__commands__new__tests__new_bump_allocator_disables_sdk_default_features.snap  cargo_airbender__commands__new__tests__new_custom_allocator_adds_allocator_hook.snap  cargo_airbender__commands__new__tests__new_enable_std_updates_guest_template.snap  cargo_airbender__commands__new__tests__new_gpu_backend_generates_real_prover_setup.snap  cargo_airbender__commands__new__tests__new_scaffolds_host_and_guest.snap
crates/cargo-airbender/templates/: README.md.template
crates/cargo-airbender/templates/guest/: Cargo.toml  Cargo.toml.template  rust-toolchain.toml.template
crates/cargo-airbender/templates/guest/.cargo/: config.toml.template
crates/cargo-airbender/templates/guest/src/: main.rs  main.rs.template
crates/cargo-airbender/templates/host/: Cargo.toml.template  rust-toolchain.toml.template
crates/cargo-airbender/templates/host/src/: main.dev.rs.template  main.gpu.rs.template
docs/: 01-installation-and-hello-world.md  02-host-program-api.md  03-guest-program-api.md  04-crypto-on-guest-and-host.md  05-cli-reference.md  README.md  book.toml
examples/: README.md
examples/cycle-markers/host/: Cargo.toml
examples/cycle-markers/host/src/: main.rs
examples/reth-block-replay/guest/: Cargo.toml
examples/reth-block-replay/guest/src/: airbender_crypto.rs  main.rs
examples/reth-block-replay/host/: Cargo.toml
examples/reth-block-replay/host/src/: main.rs  utils.rs
examples/reth-block-replay/shared/: Cargo.toml
examples/reth-block-replay/shared/src/: lib.rs
examples/revm-basic/host/: Cargo.toml
examples/revm-basic/host/src/: main.rs
examples/revm-basic/shared/: Cargo.toml
examples/revm-basic/shared/src/: lib.rs
examples/revm-witness-replay/guest/: Cargo.toml
examples/revm-witness-replay/guest/src/: main.rs
examples/revm-witness-replay/host/: Cargo.toml
examples/revm-witness-replay/host/src/: main.rs
examples/u256-add/host/: Cargo.toml
examples/u256-add/host/src/: main.rs
latest/: 01-installation-and-hello-world.html  02-host-program-api.html  03-guest-program-api.html  04-crypto-on-guest-and-host.html  05-cli-reference.html  404.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
pr-38/: 01-installation-and-hello-world.html  02-host-program-api.html  05-cli-reference.html  index.html  print.html  searchindex.js  searchindex.json
scripts/: generate_api_index.py  regen-guest-lockfiles.sh
(+30821 files in other folders)
