[package]
name = "airbender-codec"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Versioned serialization for Airbender host and guest communication"
readme = "README.md"

[dependencies]
serde = { workspace = true, default-features = false, features = ["alloc", "derive"] }
bincode = { workspace = true, default-features = false, features = ["alloc", "serde"] }
