[package]
name = "airbender-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["gpu-prover", "proof-system", "transpiler"]
docs-only = []
gpu-prover = ["dep:gpu_prover", "proof-system", "execution_utils/gpu_prover"]
proof-system = ["dep:execution_utils"]
transpiler = ["dep:riscv_transpiler"]

[dependencies]
airbender-core = { path = "../airbender-core" }
airbender-codec = { path = "../airbender-codec" }
serde = { workspace = true, features = ["derive"] }
execution_utils = { workspace = true, optional = true }
gpu_prover = { workspace = true, optional = true }
riscv_transpiler = { workspace = true, features = ["jit", "flamegraph"], optional = true }
sha3 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
