[package]
name = "airbender-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Host-side APIs for executing, proving, and verifying Airbender programs"
readme = "README.md"

[features]
default = ["gpu-prover"]
gpu-prover = ["dep:gpu_prover", "execution_utils/gpu_prover"]

[dependencies]
airbender-core = { path = "../airbender-core" }
airbender-codec = { path = "../airbender-codec" }
serde = { workspace = true, features = ["derive"] }
execution_utils = { workspace = true }
gpu_prover = { workspace = true, optional = true }
riscv_transpiler = { workspace = true, features = ["jit", "flamegraph"] }
sha3 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
