[package]
name = "cargo-airbender"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
include = [
    "src/**",
    "templates/**",
    "Cargo.toml",
]

[features]
default = ["gpu-prover", "host-runtime"]
docs-only = ["airbender-host/docs-only"]
gpu-prover = ["host-runtime", "airbender-host/gpu-prover"]
host-runtime = ["airbender-host/proof-system", "airbender-host/transpiler"]

[dependencies]
airbender-build = { version = "0.1.0", path = "../airbender-build" }
airbender-host = { version = "0.1.0", path = "../airbender-host", default-features = false }
anyhow = { workspace = true }
anstream = { workspace = true }
anstyle = { workspace = true }
bincode = { workspace = true, features = ["alloc", "serde"] }
clap = { workspace = true, features = ["derive"] }
dialoguer = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }
