[package]
name = "airbender-cycle-markers-host"
version = "0.1.0"
edition = "2021"

[dependencies]
airbender-host = { path = "../../../crates/airbender-host" }

[profile.dev.package.keccak_special5]
debug = 0

[profile.dev.package.setups]
debug = 0

[profile.release.package.keccak_special5]
debug = 0

[profile.release.package.setups]
debug = 0
