[package]
name = "airbender-reth-block-replay-host"
version = "0.1.0"
edition = "2021"

[dependencies]
airbender-host = { path = "../../../crates/airbender-host", default-features = false }
reth-block-replay-shared = { path = "../shared" }
stateless = { git = "https://github.com/paradigmxyz/stateless.git", rev = "ed189a5" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
alloy-provider = { version = "1.5", features = ["debug-api"] }
alloy-primitives = { version = "1.5", features = ["k256"] }
alloy-genesis = "1.5"
alloy-rlp = "0.3"
alloy-rpc-types-debug = "1.5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
eyre = "0.6"

[profile.dev.package.keccak_special5]
debug = 0
[profile.dev.package.setups]
debug = 0
[profile.release.package.keccak_special5]
debug = 0
[profile.release.package.setups]
debug = 0
