[package]
name = "airbender-u256-add-host"
version = "0.1.0"
edition = "2021"

[dependencies]
airbender-host = { path = "../../../crates/airbender-host" }
ruint = { version = "1.16", default-features = false, features = ["serde"] }

# This is required to avoid having to specify `RUST_MIN_STACK` for compilation.
# The reason why this is needed is because these packages are highly optimized, but the optimizations
# make debug information generation more heavy and cause the default stack size to overflow.
# This issue is expected to be resolved later.
[profile.dev.package.keccak_special5]
debug = 0
[profile.dev.package.setups]
debug = 0
[profile.release.package.keccak_special5]
debug = 0
[profile.release.package.setups]
debug = 0
